Complete desktop, add response

--- a/index.html
+++ b/index.html
@@ -319,15 +319,111 @@
       </div>
     </div>
 
-    <div class="main-platforms">
-      <div class="main-wrapper">
+    <div class="main-block block-platforms">
+      <div class="block-wrapper__platforms block-wrapper">
+        <div class="platforms-header">
+          <h4 class="platforms-title">ВИДЫ ПЛОЩАДОК</h4>
 
+          <h3 class="platforms-question">А МОЖНО ВСЕХ ПОСМОТРЕТЬ?</h3>
+
+          <p class="platforms-description">
+            В нашей системе ты можешь выбрать площадки, на которую будешь лить трафик. Каждому вебмастеру выделяется
+            собственный сайт и бот. Ниже мы собрали краткие характеристики каждой площадке.
+          </p>
+        </div>
+
+        <div class="vs-block">
+          <img src="./src/images/arbitrage-house.svg" class="arbitrage-bg" alt="">
+
+          <div class="vs-column vs-column__left">
+            <img src="./src/images/website-content.svg" alt="" class="vs-column__logo vs-logo__website">
+
+            <h5 class="vs-column__title">Сайт-витрина</h5>
+
+            <p class="vs-column__description">
+              Самая простая и популярная площадка. Можно лить со всех каналов закупки трафика. Пользователь проходит
+              короткую анкету на сайте, после чего ему показывается список финансовый компаний.
+            </p>
+
+            <ul class="vs-column__list">
+              <li class="vs-list__item">
+                <img src="./src/images/network.svg" alt="" class="vs-item__logo vs-logo__network">
+
+                <span class="vs-item__title">Большой выбор источников</span>
+                <p class="vs-item__description">Ограничений по трафику гораздо меньше, <br /> чем в ботах</p>
+              </li>
+
+              <li class="vs-list__item">
+                <img src="./src/images/tap.svg" alt="" class="vs-item__logo vs-logo__tap">
+
+                <span class="vs-item__title">Прост в использовании</span>
+                <p class="vs-item__description">Подходит для пользователей <br /> разных возрастов</p>
+              </li>
+              <li class="vs-list__item">
+                <img src="./src/images/coding.svg" alt="" class="vs-item__logo vs-logo__coding">
+
+                <span class="vs-item__title">Высокий спрос среди вебмастеров</span>
+                <p class="vs-item__description">Самая востребованная и популярная площадка <br /> на финансовом рынке
+                </p>
+              </li>
+            </ul>
+          </div>
+
+          <div class="vs-column__line">
+            <div class="vs-icon__border">
+              <span class="vs-icon">VS</span>
+            </div>
+          </div>
+
+          <div class="vs-column vs-column__right">
+            <img src="./src/images/robot.svg" alt="" class="vs-column__logo vs-logo__robot">
+
+            <h5 class="vs-column__title">ЗаймоБот</h5>
+
+            <p class="vs-column__description">
+              Относительно новая и очень эффективная площадка. Рекомендуется лить из соц.сетей. Рассчитана мобильный
+              трафик на более молодых пользователей. Бот подбирает компании, исходя из заполненной пользователем анкеты.
+            </p>
+
+            <ul class="vs-column__list">
+              <li class="vs-list__item">
+                <img src="./src/images/tap.svg" alt="" class="vs-item__logo vs-logo__tap">
+
+                <span class="vs-item__title">Прост в использовании</span>
+                <p class="vs-item__description">Мобильный трафик лучше окупается, так как пользователям <br /> легче
+                  использовать бота, пользуясь мобильным телефоном.</p>
+              </li>
+
+              <li class="vs-list__item">
+                <img src="./src/images/couple.svg" alt="" class="vs-item__logo vs-logo__couple">
+
+                <span class="vs-item__title">Подходит не всем</span>
+                <p class="vs-item__description">Целевая аудитория такой площадки - пользователи <br /> соц.сетей и
+                  мессенджеров
+                  до 35 лет</p>
+              </li>
+
+              <li class="vs-list__item">
+                <img src="./src/images/document.svg" alt="" class="vs-item__logo vs-logo__document">
+
+                <span class="vs-item__title">Высокие показатели окупаемости</span>
+                <p class="vs-item__description">При грамотном подходе бот может окупаться <br /> в 3 раза</p>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </main>
 
   <footer class="footer">
+    <div class="header-company company-wrapper">
+      <img class="company-wrapper__logo" src='./src/images/company-logo.svg' />
 
+      <h2 class="company-wrapper__title">Arbitrage.House</h2>
+    </div>
+
+    <span class="footer-company__date">© 2021</span>
   </footer>
 
 </body>
