--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
 
         <div class="scheme-wrapper">
-          <div class="scheme-column__text">
+          <div class="scheme-column__text column-text_1">
             <h3 class="scheme-column__title">ЛУЧШЕЕ <br /> ДЛЯ ЛУЧШИХ</h3>
 
             <p class="scheme-column__description">
@@ -119,7 +119,7 @@
             <div class="graph">
 
               <!-- <img class="scheme-line__1" src="./src/images/lines.png" alt="" /> -->
-              <img class="scheme-line scheme-line__1" src="./src/images/lines.png" alt="" />
+              <img class="scheme-line scheme-line__1" src="./src/images/lines.svg" alt="" />
 
               <div class="blocks">
                 <div class="scheme-block__wrapper">
@@ -155,10 +155,10 @@
                 </div>
               </div>
 
-              <img class="scheme-line scheme-line__reversed scheme-line__2" src="./src/images/lines-reversed.png"
+              <img class="scheme-line scheme-line__reversed scheme-line__2" src="./src/images/lines-reversed.svg"
                 alt="" />
               <img class="company-logo" src='./src/images/company-logo.svg' />
-              <img class="scheme-line scheme-line__3" src="./src/images/lines.png" alt="" />
+              <img class="scheme-line scheme-line__3" src="./src/images/lines.svg" alt="" />
 
               <div class="blocks">
                 <div class="scheme-block__wrapper scheme-block__last">
