--- a/index.html
+++ b/index.html
@@ -231,7 +231,9 @@
         <div class="image-wrapper">
           <img class="image-wrapper__questions" src="./src/images/questions.png" alt="" />
           <img class="image-wrapper__manager" src="./src/images/manager.png" alt="" />
+          <img class="image-wrapper__manager manager-mobile" src="./src/images/manager_2.png" alt="" />
           <img class="image-wrapper__phone" src="./src/images/phone.png" alt="" />
+          <img class="image-wrapper__phone phone-mobile" src="./src/images/phone-mobile.png" alt="" />
         </div>
       </div>
     </div>
