--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         </div>
 
         <div class="draw">
-          <img src="./src/images/party.png" alt="" class="draw-image" />
+          <img class="draw-image" src="./src/images/party.png" alt="" />
 
           <div class="draw-text">
             <h3 class="draw-title">Ого! Это все мне?</h3>
@@ -343,9 +343,8 @@
           </p>
         </div>
 
-        <div class="vs-block">
+        <div class="vs-block vs-block-tablet">
           <img src="./src/images/arbitrage-house.svg" class="arbitrage-bg" alt="">
-
 
           <input class="vs-radio vs-radio__left" checked type="radio" name="vsradio" value="left" id="vsRadioLeft">
           <input class="vs-radio vs-radio__right" type="radio" name="vsradio" value="right" id="vsRadioRight">
@@ -363,8 +362,6 @@
               <h5 class="vs-column__title">ЗаймоБот</h5>
             </label>
           </div>
-
-
 
           <div class="vs-column vs-column__left">
             <img src="./src/images/website-content.svg" alt="" class="vs-column__logo vs-logo__website">
@@ -442,6 +439,86 @@
               </li>
             </ul>
           </div>
+        </div>
+
+        <div class="vs-block vs-block-desktop">
+          <img src="./src/images/arbitrage-house.svg" class="arbitrage-bg" alt="">
+
+          <div class="vs-column vs-column__left">
+            <img src="./src/images/website-content.svg" alt="" class="vs-column__logo vs-logo__website">
+
+            <h5 class="vs-column__title">Сайт-витрина</h5>
+
+            <p class="vs-column__description">
+              Самая простая и популярная площадка. Можно лить со всех каналов закупки трафика. Пользователь проходит
+              короткую анкету на сайте, после чего ему показывается список финансовый компаний.
+            </p>
+          </div>
+
+          <div class="vs-column__line">
+            <div class="vs-icon__border">
+              <span class="vs-icon">VS</span>
+            </div>
+          </div>
+
+          <div class="vs-column vs-column__right">
+            <img src="./src/images/robot.svg" alt="" class="vs-column__logo vs-logo__robot">
+
+            <h5 class="vs-column__title">ЗаймоБот</h5>
+
+            <p class="vs-column__description">
+              Относительно новая и очень эффективная площадка. Рекомендуется лить из соц.сетей. Рассчитана мобильный
+              трафик на более молодых пользователей. Бот подбирает компании, исходя из заполненной пользователем анкеты.
+            </p>
+          </div>
+
+          <ul class="vs-advantages vs-column__list">
+            <li class="vs-list__item">
+              <img src="./src/images/network.svg" alt="" class="vs-item__logo vs-logo__network">
+
+              <span class="vs-item__title">Большой выбор источников</span>
+              <p class="vs-item__description">Ограничений по трафику гораздо меньше, <br /> чем в ботах</p>
+            </li>
+
+            <li class="vs-list__item">
+              <img src="./src/images/tap.svg" alt="" class="vs-item__logo vs-logo__tap">
+
+              <span class="vs-item__title">Прост в использовании</span>
+              <p class="vs-item__description">Мобильный трафик лучше окупается, так как пользователям <br /> легче
+                использовать бота, пользуясь мобильным телефоном.</p>
+            </li>
+
+            <li class="vs-list__item">
+              <img src="./src/images/tap.svg" alt="" class="vs-item__logo vs-logo__tap">
+
+              <span class="vs-item__title">Прост в использовании</span>
+              <p class="vs-item__description">Подходит для пользователей <br /> разных возрастов</p>
+            </li>
+
+            <li class="vs-list__item">
+              <img src="./src/images/couple.svg" alt="" class="vs-item__logo vs-logo__couple">
+
+              <span class="vs-item__title">Подходит не всем</span>
+              <p class="vs-item__description">Целевая аудитория такой площадки - пользователи <br /> соц.сетей и
+                мессенджеров
+                до 35 лет</p>
+            </li>
+
+            <li class="vs-list__item">
+              <img src="./src/images/coding.svg" alt="" class="vs-item__logo vs-logo__coding">
+
+              <span class="vs-item__title">Высокий спрос среди вебмастеров</span>
+              <p class="vs-item__description">Самая востребованная и популярная площадка <br /> на финансовом рынке
+              </p>
+            </li>
+
+            <li class="vs-list__item">
+              <img src="./src/images/document.svg" alt="" class="vs-item__logo vs-logo__document">
+
+              <span class="vs-item__title">Высокие показатели окупаемости</span>
+              <p class="vs-item__description">При грамотном подходе бот может окупаться <br /> в 3 раза</p>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
