--- a/index.html
+++ b/index.html
@@ -157,7 +157,12 @@
 
               <img class="scheme-line scheme-line__reversed scheme-line__2" src="./src/images/lines-reversed.svg"
                 alt="" />
-              <img class="company-logo" src='./src/images/company-logo.svg' />
+
+              <div class="company-logo__wrapper">
+                <img class="company-logo" src='./src/images/company-logo.svg' />
+                <img class="company-logo__text" src="./src/images/Arbitrage.House.svg" alt="" />
+              </div>
+
               <img class="scheme-line scheme-line__3" src="./src/images/lines.svg" alt="" />
 
               <div class="blocks">
@@ -535,6 +540,5 @@
   </footer>
 
 </body>
-<script src="./src/script/index.js"></script>
 
 </html>
